# oasm-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Taskfile.yml  dev.py  docker-compose.yml  environment.yml  logging.ini  main.py  pyproject.toml  pytest.ini  requirements.txt  test_streaming_client.py
.github/workflows/: build-nightly.yml  build-release.yml
agents/: __init__.py  security_assistant.py
agents/base/: __init__.py  agent_memory.py  agent_perception.py  agent_state.py  base_agent.py
agents/core/: __init__.py  base_agent.py  cot_agent.py  database_service.py  environment.py  memory.py  perception.py  state.py
agents/debate/: consensus_builder.py  debate_moderator.py  decision_validator.py
agents/reflex/: alert_handler.py  incident_responder.py  reflex_agent.py
agents/specialized/: __init__.py  analysis_agent.py  coordination_agent.py  incident_response_agent.py  network_recon_agent.py  nuclei_generation_agent.py  nuclei_generator_agent.py  orchestration_agent.py  report_generation_agent.py  threat_detection_agent.py  threat_intelligence_agent.py  vulnerability_scan_agent.py  web_security_agent.py
agents/swarm/: collective_intelligence.py  swarm_coordinator.py  task_distributor.py
agents/workflows/: __init__.py  langgraph_coordinator.py  security_coordinator.py
apis/: __init__.py
apis/endpoints/: core.py
apis/middlewares/: auth.py
app/: main.py
app/grpc_server/: __init__.py  conversation_servicer.py  domain_classify_servicer.py  health_servicer.py  issue_servicer.py  llm_config_servicer.py  mcp_server_servicer.py  message_servicer.py  nuclei_template_servicer.py
app/interceptors/: __init__.py  conversation_interceptor.py  get_metadata_interceptor.py  message_interceptor.py
app/protos/: app.proto  app_pb2.py  app_pb2_grpc.py  assistant.proto  assistant_pb2.py  assistant_pb2.pyi  assistant_pb2_grpc.py
app/services/: __init__.py  conversation.py  conversation_service.py  domain_classifier.py  domain_classifier_service.py  health_service.py  issue_service.py  llm_config_service.py  mcp_server.py  mcp_server_service.py  message.py  message_service.py  nuclei_scheduler.py  nuclei_scheduler_service.py  nuclei_template.py  nuclei_template_service.py  service_registry.py  streaming_handler_service.py
common/: types.py
common/config/: __init__.py  configs.py  constants.py  database.py  logger.py  logging_config.py  settings.py
common/enums/: enum.py
common/exceptions/: __init__.py  agent_error_handler.py  base_exceptions.py  data_exceptions.py  exception_handler.py
common/logger/: __init__.py  logger.py
common/schemas/: __init__.py  sche_base.py
common/utils/: cron.py  git.py  security.py
core/config/: database.py  settings.py
core/embeddings/: __init__.py
core/exceptions/: agent_exceptions.py
core/utils/: formatters.py  security.py  validators.py
data/connection/: postgres_connection.py
data/database/: __init__.py  chroma_database.py  database.py  postgres_database.py
data/embeddings/: __init__.py  embedding_manager.py  embeddings.py
data/indexing/: __init__.py  document_indexer.py  metadata_indexer.py  semantic_indexer.py  vector_store.py
data/models/: __init__.py  asset.py  base.py  chat_session.py  conversations.py  database_models.py  http_response.py  knowledgebase_info.py  messages.py  port.py  reports.py  scan_results.py  threats.py  tls_info.py  users.py  views.py  vulnerabilities.py  workspace.py  workspace_members.py
data/processors/: data_normalizer.py  duplicate_detector.py  quality_assessor.py  schema_validator.py
data/redis/: __init__.py  redis_client.py
data/repositories/: __init__.py  base.py  (+9 more)
docs/: ANALYSIS_AGENT_GUIDE.md  CONFIGURATION.md  INSTALLATION.md  LLM_DEPLOYMENT.md  analysis-agent-flow.md  architecture.excalidraw  llm-deployment.md  mcp-healthcheck-optimization.md  vector_database_setup.md
examples/: README.md  domain_classification_client.py  health_check_client.py  mcp.py  mcp_example.py  requirements.txt
llms/: __init__.py  llm_factory.py  llm_manager.py  llms.py  local_llms.py  online_llms.py
messaging/: agent_messaging.py
scripts/: __init__.py  generate_security_playbooks.py  knowledge_data_collector.py  knowledge_scheduler.py  setup_analysis_agent.py
searxng/: limiter.toml  mcp-server.json  settings.yml
test/: test-batch-processor.py  test_contectretriever.py  test_embedding.py
tests/: conftest.py  test_batch_processor.py  test_chunk_processor.py  test_contectretriever.py  test_database.py  test_domain_classifier.py  test_embedding.py  test_embedding_interface.py  test_index.py  test_mcp.py  test_mcp_client.py  test_mcp_integration.py  test_nuclei_scheduler.py  test_nuclei_template_service.py  test_pipeline_data.py  test_rag.py  test_text_preprocessor.py  test_vector_embedding.py  test_vector_store.py
tools/: __init__.py  base.py  nuclei_template_manager.py  run_command.py
workflows/: __init__.py
(+239 files in other folders)
