[project]
name = "oasm-assistant"
version = "0.1.0"
description = "OASM Assistant - AI-powered security assistant with gRPC API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # gRPC
    "grpcio==1.76.0",
    "grpcio-tools==1.76.0",
    "grpcio-status==1.76.0",
    "grpcio-reflection==1.76.0",
    "googleapis-common-protos==1.72.0",
    "watchfiles==1.1.1",
    
    # Configuration & Settings
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    
    # Database
    "sqlalchemy==2.0.44",
    "pgvector==0.3.6",
    "psycopg2-binary==2.9.11",
    
    # AI/ML Core
    "numpy==2.3.5",
    
    # LangChain - complete set for all providers
    "langchain==1.1.2",
    "langchain-core==1.1.1",
    "langchain-anthropic==1.2.0",
    "langchain-openai==1.1.0",
    "langchain-google-genai==3.2.0",
    "langchain-ollama==1.0.0",
    "langchain-mcp-adapters==0.1.14",
    
    # Document Processing
    "pypdf==6.4.0",
    "json5==0.10.0",
    
    # LangGraph for agent workflow
    "langgraph==1.0.4",
    "langgraph-checkpoint==3.0.1",
    
    # Logging
    "loguru==0.7.3",
    
    # Utilities
    "aiohttp==3.13.2",
    "nest-asyncio==1.6.0",
    
    # Web Search
    "requests==2.32.5",
    "beautifulsoup4==4.14.3",
    
    # LangChain Community & PostgreSQL Vector Store
    "langchain-community==0.4.1",
    "langchain-postgres==0.0.16",
    "langchain-huggingface==1.1.0",
    
    # PyTorch (CUDA version from conda)
    "torch==2.9.1",
    "torchao==0.16.0.dev20251214+cu128",
    
    # Sentence Transformers for HuggingFace embeddings
    "sentence-transformers==5.1.2",
    
    # BM25 for keyword search
    "rank-bm25==0.2.2",
    
    # Git operations
    "GitPython==3.1.45",
    
    # YAML parsing
    "PyYAML==6.0.3",

    # Redis
    "redis==7.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "agents", "common", "llms", "tools"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

# Use PyTorch CPU-only builds to reduce image size and build time
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
